--- a/preparación_datos.ipynb
+++ b/preparación_datos.ipynb
@@ -46,8 +46,10 @@
       "source": [
         "#@title Importar Librerías\n",
         "#@markdown Librerías requeridas para la manipulación de imágenes\n",
-        "!apt install imagemagick > /dev/null 2>&1\n",
-        "\n",
+        "#|hide"
+        "#|skip"
+        "! [ -e /content ] && pip install -Uqq fastai  # upgrade fastai on colab"
+        "!apt install imagemagick > /dev/null 2>&1"
         "import glob\n",
         "import os\n",
         "from math import floor, ceil\n",
